--- a/WebLegemClient/src/css/directivas/resultado_busqueda.css
+++ b/WebLegemClient/src/css/directivas/resultado_busqueda.css
@@ -45,8 +45,10 @@
 .control_tarjeta{
     width:100%;
     display:flex;
+    flex-grow:1;
     justify-content:flex-end;
-    align-items:center;
+    align-self:flex-end;
+    align-items:flex-end;
     transition:all .6s;
     padding-top:5px;   
     padding-bottom:10px;
