--- a/WebLegemClient/src/css/elementos/circulo_carga.css
+++ b/WebLegemClient/src/css/elementos/circulo_carga.css
@@ -11,6 +11,17 @@
     border-radius:50%;
     background:#099472;
 }
+
+.circulo_carga:before{
+    content:"\e02f";
+    font-family:"iconos-legem";
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    align-items:center;
+    width:100%;
+    height:100%;
+}
 /*-----------------------------------------*/
 
 .circulo_carga.grande{
@@ -23,6 +34,10 @@
     height:30px;
     width:30px;
 }
+.circulo_carga.grande:before{
+    font-size:40px;    
+}
+
 
 /*-----------------------------------------*/
 .circulo_carga.mediano{
@@ -34,8 +49,12 @@
     top:0;
     height:20px;
     width:20px;
-    border-radius:50%;
 }
+
+.circulo_carga.mediano:before{
+    font-size:30px;    
+}
+
 
 /*-----------------------------------------*/
 .circulo_carga.pequeno{
@@ -47,8 +66,11 @@
     top:0;
     height:10px;
     width:10px;
-    border-radius:50%;
 }
+.circulo_carga.pequeno:before{
+    font-size:15px;    
+}
+
 
 
 
