--- a/WebLegemClient/src/css/plantillas/layout_general.css
+++ b/WebLegemClient/src/css/plantillas/layout_general.css
@@ -64,6 +64,7 @@
         box-shadow:0 0 0 1px rgba(0, 0, 0, 0.05),0 1px 2px rgba(0, 0, 0, 0.3);
         width:90%;
         margin-bottom:20px;
+        min-height:80vh;
     }
 
     
