--- a/WebLegemClient/src/css/plantillas/news.css
+++ b/WebLegemClient/src/css/plantillas/news.css
@@ -59,6 +59,8 @@
     box-shadow:0 0 0 1px rgba(0, 0, 0, 0.05),0 1px 2px rgba(0, 0, 0, 0.3);
     background:rgba(255, 255, 255, 0.95);
     width:100%;
+    display:flex;
+    flex-direction:column;
     
 }
 
