--- a/WebLegemClient/src/app/busqueda/ver/ver-documento.tmpl.html
+++ b/WebLegemClient/src/app/busqueda/ver/ver-documento.tmpl.html
@@ -8,5 +8,5 @@
             height: 93vh;
         }
     </style>
-    <embed class="pdf-viewer" name="plugin" src="{{ vm.id }}" type="application/pdf">
+    <embed class="pdf-viewer" name="plugin" ng-src="{{ vm.id }}" type="application/pdf">
 </div>
