--- a/WebLegemClient/src/common/components/wl-lista-usuarios/wl-lista-usuarios.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-usuarios/wl-lista-usuarios.tmpl.html
@@ -1,29 +1,34 @@
-﻿<div class="box_input_btn">
-    <input type="text"
-           class="input_text_btn"
-           ng-class="vm.editando? 'disable': ''"
-           maxlength="20"
-           placeholder="{{vm.language.strings.Filtro}}"
-           ng-model="vm.filtro" />
-    <button class="btn_cancel" title="Quitar filtro" ng-click="vm.filtro=''" ng-show="vm.filtro.length > 2">
-        <span class="ico-plus"></span>
-    </button>
+﻿<div>
+    <label class="texto_labels" style="margin-top:10px;">{{vm.language.strings.Usuarios}}</label>
+
+    <div class="box_input_btn">
+        <input type="text"
+               class="input_text_btn"
+               ng-class="vm.editando? 'disable': ''"
+               maxlength="20"
+               placeholder="{{vm.language.strings.Filtro}}"
+               ng-model="vm.filtro" />
+        <button class="btn_cancel" title="Quitar filtro" ng-click="vm.filtro=''" ng-show="vm.filtro.length > 2">
+            <span class="ico-plus"></span>
+        </button>
+    </div>
+
+
+    <ul class="a_listado" style="width:100%;">
+        <li ng-repeat="usuario in vm.lista | filter:vm.filtro"
+            ng-class="vm.editando? 'no_selecteable': ''">
+
+            <input type="radio" class="styled" id="a_{{usuario.id}}" name="a" />
+
+            <label class="styled" for="a_{{usuario.id}}"
+                   ng-click="vm.seleccionarObjeto(usuario);"
+                   ng-class="vm.checkear(usuario)? 'animated': ''"
+                   ng-checked="vm.checkear(usuario)">
+                {{ usuario.nombre }} {{ usuario.apellido }}<br />
+                <p>Rol: {{ usuario.rol.nombre }}</p>
+            </label>
+        </li>
+    </ul>
+
+
 </div>
-
-<p class="texto_labels green bold">{{vm.language.strings.Usuarios}}</p>
-
-<ul class="a_listado" style="width:100%;">
-    <li ng-repeat="usuario in vm.lista | filter:vm.filtro"
-        ng-class="vm.editando? 'no_selecteable': ''">
-
-        <input type="radio" class="styled" id="a_{{usuario.id}}" name="a" />
-
-        <label class="styled" for="a_{{usuario.id}}"
-               ng-click="vm.seleccionarObjeto(usuario);"
-               ng-class="vm.checkear(usuario)? 'animated': ''"
-               ng-checked="vm.checkear(usuario)">
-            {{ usuario.nombre }} {{ usuario.apellido }}<br />
-            <p>Rol: {{ usuario.rol.nombre }}</p>
-        </label>
-    </li>
-</ul>
