--- a/WebLegemClient/src/common/components/wl-lista-permisos/wl-lista-permisos.tmpl.html
+++ b/WebLegemClient/src/common/components/wl-lista-permisos/wl-lista-permisos.tmpl.html
@@ -1,30 +1,10 @@
-﻿<div class="contenedor_permisos" ng-repeat="modulo in vm.modulos">
+﻿<div class="contenedor_permisos" ng-repeat="recurso in vm.permisosAsignados">
     <div class="titulo_modulo">
-        <p class="texto_labels">{{ modulo.nombre }}</p>
-        <p class="estado_permiso">{{vm.language.strings.PermitirTodo}}</p>
+        <p class="texto_labels">{{ recurso.nombre }}</p>        
         <div class="switch_container">
-            <input type="checkbox" id="switch1" name="switch1"
-                   class="switch" />
-            <label for="switch1"></label>
+            <input type="checkbox" id="swt-rec{{recurso.id}}" name="swt-rec{{recurso.id}}"
+                   class="switch" ng-model="recurso.valor" />
+            <label for="swt-rec{{recurso.id}}"></label>
         </div>
-    </div>
-    
-    <div class="permiso_submodulo" ng-repeat="permiso in vm.permisosAsignados | filter:modulo.nombre ">
-        <hr ng-if="permiso.id % 4 === 0" />
-        <p>{{ permiso.accion.nombre }} {{ permiso.recurso.nombre }}</p>
-        <p class="estado_permiso">{{vm.language.strings.NoPermitido}}</p>
-
-        <div id="switch_container" class="checkbox_container">
-            <input  id="sw_permisos_{{permiso.id}}"
-                    name="sw_permisos_{{permiso.id}}"
-                    class="a_checkbox"
-                    type="checkbox"     
-                    ng-disabled="!vm.editando"
-                    ng-class="permiso.valor ? 'checked': ''"
-                    ng-model="permiso.valor"
-                    ng-checked="permiso.valor" />
-
-            <label for="sw_permisos_{{permiso.id}}"></label>
-        </div>
-    </div>
+    </div>        
 </div>
